@@ -3,6 +3,7 @@
 	* src/dfsch.c (lambda_extend): Fixed misbehaving lambda_extend for
 	functions with variable number of srguments called without any
 	arguments 
+	(dfsch_raise): Thread safe exception handling
 
 	* src/native.c (native_form_defined_p): Fixed defined? to work
 	with new wxception system
